Mon Nov 10 16:09:43 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (rb_f_kill): [DOC] mention known signal list.
	  [ruby-core:66162] [Bug #10492]

Mon Nov 10 14:17:58 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rdoc/*.rb: Update to RDoc 4.2.0.alpha(579a11c)

Mon Nov 10 12:44:39 2014  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/server.rb: Less instance variables.

Mon Nov 10 12:19:43 2014  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/server.rb (shutdown): Use close() on @shutdown_pipe_w to
	  notify readability on the read side of the pipe.
	  write_nonblock() is not usable for pipe on Windows.
	  (cleanup_shutdown_pipe): Rescue IOError for @shutdown_pipe_w.close.

Mon Nov 10 07:31:59 2014  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/server.rb (initialize): Initialize shutdown pipe here
	  to avoid race condition.
	  (cleanup_shutdown_pipe): New private method.
	  (cleanup_listener): Extracted from shutdown method.
	  Call this method from start method to avoid race condition.

Mon Nov 10 05:57:53 2014  Tanaka Akira  <akr@fsij.org>

	* test/webrick/webrick.cgi: Don't use debug mode.

	* test/webrick/webrick_long_filename.cgi: Ditto.

Sun Nov  9 23:25:49 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (vm_call_super): allow bound proc method to call super
	  method.

	* vm_insnhelper.c (vm_yield_with_cfunc): push defined class and
	  bound proc method entry to the control frame.

Sun Nov  9 22:46:13 2014  Tanaka Akira  <akr@fsij.org>

	* test/open-uri: Test server log in server thread.

	* test/webrick: Ditto.

Sun Nov  9 22:28:34 2014  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/httpstatus.rb: require webrick/accesslog for AccessLog.

Sun Nov  9 21:03:59 2014  Tanaka Akira  <akr@fsij.org>

	* test/webrick: Fix the argument order of assert_equal.

Sun Nov  9 20:29:01 2014  Tanaka Akira  <akr@fsij.org>

	* test/webrick: Store log in an array.

	* test/net/http: Ditto.

	* test/open-uri: Ditto.
