@@ -1,3 +1,7 @@
+Mon Nov 10 16:20:42 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
+
+	* lib/rubygems/*.rb: Update to RubyGems master(3e36528).
+
 Mon Nov 10 16:09:43 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* signal.c (rb_f_kill): [DOC] mention known signal list.
